# chess-engine

./: .gitignore  CMakeLists.txt
include/: board.hpp  constants.hpp  move.hpp  move_generator.hpp  piece.hpp
include/board/: board.hpp
src/: board.cpp  main.cpp  move.cpp  move_generator.cpp  piece.cpp
src/board/: board.cpp
test/: move_generator_tests.cpp
